--- a/tgui/packages/tgui/styles/components/TextArea.scss
+++ b/tgui/packages/tgui/styles/components/TextArea.scss
@@ -6,8 +6,11 @@
  @use '../base.scss';
  @use '../functions.scss' as *;
 
+ $text-color: #272727 !default;
  $border-color: #88bfff !default;
  $border-radius: base.$border-radius !default;
+ $color-background: #bb9b68 !default;
+ $color-border: #272727 !default;
 
  .TextArea {
    overflow: hidden;
@@ -17,9 +20,7 @@
    border: 1px solid $border-color;
    border: 1px solid rgba($border-color, 0.75);
    border-radius: $border-radius;
-   color: #fff;
-   background-color: #000;
-   background-color: rgba(0, 0, 0, 0.75);
+   background-color: $color-background;
    margin-right: 2px;
    line-height: 17px;
    overflow: visible;
@@ -28,7 +29,7 @@
    box-sizing: border-box;         /* Opera/IE 8+ */
    width:100%;
 
- }
+
 
  .TextArea_filler {
    word-wrap: break-word; /* make sure the div and the textarea wrap words in the same way */
@@ -67,9 +68,8 @@
    height: 17px;
    margin: 0;
    padding: 0 6px;
-   font-family: Verdana, sans-serif;
+   font-family: inherit;
    background-color: transparent;
-   color: #fff;
    color: inherit;
    box-sizing: border-box;
    width: 100%;
@@ -91,6 +91,8 @@
    &:-ms-input-placeholder {
      font-style: italic;
      color: #777;
-     color: rgba(255, 255, 255, 0.45);
+   /*  color: rgba(255, 255, 255, 0.45);*/
    }
+ }
+
  }
